--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://Saijami38.github.io/Royal-Enterprises",
   "proxy": "http://127.0.0.1:5000/",
   "dependencies": {
+    "@babel/core": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
