--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.2",
     "axios": "^1.6.2",
     "express": "^4.18.2",
     "gh-pages": "^6.0.0",
