--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "royal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Saijami38.github.io/Royal-Enterprises",
+  "homepage": "https://Saijamii.github.io/home",
   "proxy": "http://127.0.0.1:5000/",
   "dependencies": {
     "@babel/core": "^7.23.3",
