--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.11.2",
     "axios": "^1.6.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "gh-pages": "^6.0.0",
     "mongoose": "^8.0.1",
