package.json inventory_mangement

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "royal",
+  "name": "inventory_mangement",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Saijamii.github.io/home",
