--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inventory_mangement",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saijamii.github.io/home",
+  "homepage": "https://saijamii.github.io/Inventory-Mangement",
   "proxy": "http://127.0.0.1:5000/",
   "dependencies": {
     "@babel/core": "^7.23.3",
