--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "gh-pages": "^6.0.0",
+    "heroku": "^8.7.1",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
