--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "gh-pages": "^6.0.0",
     "heroku": "^8.7.1",
+    "lottie-react": "^2.4.0",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
