--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inventory_mangement",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saijamii.github.io/Inventory-Mangement",
+  "homepage": "https://saijamii.github.io/inventory-mangement",
   "dependencies": {
     "@babel/core": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,7 +12,7 @@
     "axios": "^1.6.2",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.1.1",
     "heroku": "^8.7.1",
     "lottie-react": "^2.4.0",
     "mongoose": "^8.0.1",
